Added RoR stuff & link to old site...

--- a/index.htm
+++ b/index.htm
@@ -57,8 +57,9 @@ h1{ padding: 12px 0 ; font-size: 20px; font-weight: bold; }
 body{ width: 900px; margin: 20px auto; background: #EFEFEF }
 *{ overflow: hidden}
 
-#skills>*{cursor: pointer}
-#skills>div>p, #skills>div:hover>p{
+#skills>*{
+    cursor: pointer;
+
     /* For Safari 3.1 to 6.0 */
     -webkit-transition-property: height;
     -webkit-transition-duration: 1s;
@@ -66,9 +67,12 @@ body{ width: 900px; margin: 20px auto; background: #EFEFEF }
     -webkit-transition-delay: 2s;
     /* Standard syntax */
     transition-property: height;
-    transition-duration: 1s;
+    transition-duration: 1s;;
     transition-timing-function: linear;
-    transition-delay: 2s;
+    transition-delay: 2s
+
+}
+#skills>div>p, #skills>div:hover>p{
 }
 #skills>div>p{
     height: 0;
@@ -85,6 +89,8 @@ body{ width: 900px; margin: 20px auto; background: #EFEFEF }
     <div><h2>Golang</h2><p>>1 year working with Google's Go Language on Edmodo back-end Thrift services.</p></div>
     <div><h2>PHP</h2><p>~5 years working with PHP on features and RESTful APIs.</p></div>
     <div><h2>Javascript</h2><p>~5 years working with object-oriented Javascript on user-interface.</p></div>
+    <div><h2>Ruby on Rails</h2><p>I've had some experience working with Ruby and the Rails framework over the past year.
+        I'm comfortable working with our rails project and understand how to work with Rails MVC structure.</p></div>
     <div><h2>C#</h2><p>~3 years personal experience using C# with Unity3d engine.</p></div>
     <div><h2>Unity 3D</h2><p>Over the past 3-4 years I've spent much of my spare time experimenting with different features of Unity 3D.</p></div>
     <div><h2>Blender3D, Maya, 3DS Max, & 3D Studio</h2><p>Since ~1996 I've been interested in 3D software and have experience using the software mentioned here.</p></div>
@@ -137,6 +143,8 @@ body{ width: 900px; margin: 20px auto; background: #EFEFEF }
         Organic Modeling, Intermediate Figure Drawing, Basic Figure Drawing, Figure Modeling, Maya 1, Analysis of Form
     </p>
 </div>
+
+<a href="old_index.htm">Older Work</a>
 
 <noscript>
       <p align='center'>
